--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node --presets @babel/preset-env index.js",
-    "build": "babel --presets @babel/preset-env index.js -o dist/index.js"
+    "build": "ncc build index.js --minify --target es2018"
   },
   "author": "Drowze",
   "license": "ISC",
@@ -13,15 +13,13 @@
     "@actions/core": "^1.6.0",
     "@actions/github": "^5.0.0",
     "@octokit/auth-app": "^3.6.1",
-    "@octokit/rest": "^18.12.0",
-    "axios": "^0.24.0",
-    "jsonwebtoken": "^8.5.1"
+    "@octokit/rest": "^18.12.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.0",
     "@babel/node": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
+    "@vercel/ncc": "^0.32.0",
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3"
